--- a/MixeR/MixeR/MixeR.vcxproj
+++ b/MixeR/MixeR/MixeR.vcxproj
@@ -81,8 +81,8 @@
       <AdditionalIncludeDirectories>C:\Users\User\Documents\GitHub\MyLib\MyLib\MyLib\MyLib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <AdditionalLibraryDirectories>C:\Users\User\Documents\GitHub\MyLib\MyLib\bin\x86\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Users\User\Documents\GitHub\MyLib\MyLib\MyLib\lib\x86\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>MyLib.res;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
